--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Instagram Grid Planner</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h2>Meu Widget de Grid IG</h2>
+  <div id="grid" class="grid"></div>
 
+  <script src="script.js"></script>
 </body>
 </html>
