--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Instagram Planner</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Notion IG Grid</title>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 16px;
+    }
+
+    button {
+      padding: 8px 14px;
+      font-size: 14px;
+      cursor: pointer;
+      margin-bottom: 16px;
+    }
+
+    #grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+      gap: 8px;
+    }
+
+    #grid img {
+      width: 100%;
+      aspect-ratio: 1 / 1;
+      object-fit: cover;
+      cursor: pointer;
+    }
+  </style>
 </head>
+
 <body>
 
-<div class="grid" id="grid"></div>
+  <!-- BOTÃO ATUALIZAR -->
+  <button id="refreshBtn">Atualizar</button>
 
-<script src="script.js"></script>
+  <!-- GRID -->
+  <div id="grid"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
