--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,55 @@
       z-index: 1000;
     }
 
-    #modal img {
+    #carousel {
+      position: relative;
       max-width: 90%;
       max-height: 90%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #carousel img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 40px;
+      color: white;
+      cursor: pointer;
+      user-select: none;
+      padding: 8px;
+    }
+
+    .arrow.left {
+      left: -50px;
+    }
+
+    .arrow.right {
+      right: -50px;
+    }
+
+    #dots {
+      position: absolute;
+      bottom: -30px;
+      display: flex;
+      gap: 6px;
+    }
+
+    .dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: gray;
+    }
+
+    .dot.active {
+      background: white;
     }
 
     #closeModal {
@@ -61,16 +107,21 @@
 
 <body>
 
-  <!-- BOTÃO ATUALIZAR -->
   <button id="refreshBtn">Atualizar</button>
 
-  <!-- GRID -->
   <div id="grid"></div>
 
   <!-- MODAL -->
   <div id="modal">
     <span id="closeModal">&times;</span>
-    <img id="modalImage" />
+
+    <div id="carousel">
+      <span class="arrow left" id="prev">&#10094;</span>
+      <img id="modalImage" />
+      <span class="arrow right" id="next">&#10095;</span>
+
+      <div id="dots"></div>
+    </div>
   </div>
 
   <script src="script.js"></script>
