--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,16 @@
       font-family: sans-serif;
     }
 
+    button {
+      width: 100%;
+      padding: 10px;
+      border: none;
+      background: #000;
+      color: #fff;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -17,10 +27,8 @@
     }
 
     .item {
-      position: relative;
       aspect-ratio: 1 / 1;
       overflow: hidden;
-      cursor: pointer;
     }
 
     .item img {
@@ -28,67 +36,13 @@
       height: 100%;
       object-fit: cover;
     }
-
-    /* ÍCONE DE CARROSSEL */
-    .carousel-icon {
-      position: absolute;
-      top: 6px;
-      right: 6px;
-      background: rgba(0,0,0,0.6);
-      color: white;
-      font-size: 12px;
-      padding: 4px 6px;
-      border-radius: 12px;
-    }
-
-    /* MODAL */
-    .modal {
-      display: none;
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.9);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
-
-    .modal.active {
-      display: flex;
-    }
-
-    .modal img {
-      max-width: 90%;
-      max-height: 90%;
-    }
-
-    .dots {
-      position: absolute;
-      bottom: 20px;
-      display: flex;
-      gap: 6px;
-    }
-
-    .dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: rgba(255,255,255,0.4);
-    }
-
-    .dot.active {
-      background: white;
-    }
   </style>
 </head>
 
 <body>
+  <button id="refresh">Atualizar</button>
   <div class="grid" id="grid"></div>
 
-  <div class="modal" id="modal">
-    <img id="modalImage">
-    <div class="dots" id="dots"></div>
-  </div>
-
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
