--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,80 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>IG Grid</title>
+  <title>Instagram Grid Planner</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
     body {
       margin: 0;
-      font-family: sans-serif;
+      padding: 16px;
+      font-family: Arial, sans-serif;
+      background: #fff;
     }
 
-    button {
-      width: 100%;
-      padding: 10px;
+    #refresh {
+      margin-bottom: 12px;
+      padding: 8px 12px;
       border: none;
+      border-radius: 6px;
       background: #000;
       color: #fff;
-      font-size: 16px;
       cursor: pointer;
     }
 
-    .grid {
+    #grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 2px;
+      gap: 4px;
     }
 
-    .item {
-      aspect-ratio: 1 / 1;
-      overflow: hidden;
-    }
-
-    .item img {
+    .grid-img {
       width: 100%;
-      height: 100%;
+      aspect-ratio: 1 / 1;
       object-fit: cover;
+      cursor: pointer;
+    }
+
+    /* ===== MODAL ===== */
+    #modal {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.85);
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    #modal-img {
+      max-width: 90%;
+      max-height: 90%;
+    }
+
+    #close-modal {
+      position: absolute;
+      top: 16px;
+      right: 20px;
+      font-size: 28px;
+      color: #fff;
+      cursor: pointer;
     }
   </style>
 </head>
 
 <body>
-  <button id="refresh">Atualizar</button>
-  <div class="grid" id="grid"></div>
 
-  <script src="/script.js"></script>
+  <button id="refresh">Atualizar</button>
+
+  <div id="grid"></div>
+
+  <!-- MODAL -->
+  <div id="modal">
+    <span id="close-modal">&times;</span>
+    <img id="modal-img" />
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
