--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,31 @@
       cursor: pointer;
     }
 
+    .post {
+  position: relative;
+}
+
+.dots {
+  position: absolute;
+  bottom: 6px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 4px;
+}
+
+.dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: rgba(255,255,255,0.5);
+}
+
+.dot.active {
+  background: #fff;
+}
+
+
     /* ===== MODAL ===== */
     #modal {
       display: none;
