--- a/public/index.html
+++ b/public/index.html
@@ -97,9 +97,10 @@
   <!-- MODAL -->
   <div id="modal">
     <span id="close-modal">&times;</span>
-    <img id="modal-img" />
+    <div id="modal-content"></div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="/public/script.js"></script>
+  
 </body>
 </html>
