--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Instagram Grid Planner</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Galeria</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
-  <div id="grid" class="grid"></div>
+  <button id="refresh">Atualizar</button>
 
-  <script src="script.js"></script>
+  <div id="grid"></div>
+
+  <!-- MODAL -->
+  <div id="modal">
+    <span id="close-modal">✕</span>
+    <img id="modal-img">
+  </div>
+
+  <script src="/script.js"></script>
 </body>
 </html>
