--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
     <div id="modal-content"></div>
   </div>
 
-  <script src="/public/script.js"></script>
+  <script src="/script.js"></script>
   
 </body>
 </html>
