--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,11 @@
     }
 
     #modal-img {
-      max-width: 90%;
-      max-height: 90%;
-    }
+  display: block;
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: contain;
+}
 
     #close-modal {
       position: absolute;
