--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
     <div id="modal-content"></div>
   </div>
 
-  <script src="/script.js"></script>
+ <script src="script.js"></script>
   
 </body>
 </html>
