--- a/public/index.html
+++ b/public/index.html
@@ -99,8 +99,8 @@
   <!-- MODAL -->
   <div id="modal">
     <span id="close-modal">&times;</span>
-    <div id="modal-content"></div>
-  </div>
+    <img id="modal-img" />
+</div>
 
 <script src="script.js"></script>
 </body>
