--- a/public/index.html
+++ b/public/index.html
@@ -129,9 +129,14 @@
   <div id="grid"></div>
 
   <!-- MODAL -->
-  <div id="modal">
-    <span id="close-modal">&times;</span>
-    <img id="modal-img" />
+<div id="modal">
+  <span id="close-modal">&times;</span>
+
+  <span id="prev" class="nav">&#10094;</span>
+
+  <img id="modal-img" />
+
+  <span id="next" class="nav">&#10095;</span>
 </div>
 
 <script src="script.js"></script>
