--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,26 @@
   background: rgba(0, 0, 0, 0.15);
 }
 
+    /* ===== SETAS DO MODAL ===== */
+.nav {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+  user-select: none;
+  padding: 12px;
+}
+
+#prev {
+  left: 10px;
+}
+
+#next {
+  right: 10px;
+}
+
   </style>
 </head>
 
