--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,15 @@
   right: 10px;
 }
 
+    /* ===== DRAG & DROP ===== */
+.post {
+  cursor: grab;
+}
+
+.post.dragging {
+  opacity: 0.4;
+}
+
   </style>
 </head>
 
